# urban-pulse

./: .gitignore  README.md  pyproject.toml
docs/: data-sources.md  decision-log.md
docs/superpowers/plans/: 2026-07-12-local-runtime.md
docs/superpowers/specs/: 2026-07-12-foundation-design.md
src/urbanpulse/: __init__.py
src/urbanpulse/runtime/: __init__.py  settings.py
tests/: test_package.py
tests/runtime/: test_settings.py
