[project]
name = "urbanpulse"
version = "0.1.0"
description = "A local-first platform for learning city-scale mobility data engineering."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.46",
    "confluent-kafka>=2.15.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
]

[project.scripts]
urbanpulse-runtime-smoke = "urbanpulse.runtime.smoke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
markers = [
    "integration: requires the local Docker Compose runtime"
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]
extend-exclude = [".uv-cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
